--- a/3.html
+++ b/3.html
@@ -17,6 +17,8 @@
         <li><a href="1.html">HTML</a></li>
         <li><a href="2.html">CSS</a></li>
         <li><a href="3.html">JAVASCRIPT</a></li>
+        <li><a href="myani.html">ani 1</a></li>
+        <li><a href="myani2.html">ani 2</a></li>
     </ul>
     </nav>
     <section id="main">
