--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <li><a href="1.html">HTML</a></li>
         <li><a href="2.html">CSS</a></li>
         <li><a href="3.html">JAVASCRIPT</a></li>
+        <li><a href="myani.html">ani 1</a></li>
+        <li><a href="myani2.html">ani 2</a></li>
     </ul>
     <figure>
         <img width="85" height="85" src="1.jpg" alt="원숭이"/>
