--- a/index.html
+++ b/index.html
@@ -3,41 +3,120 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Blog Page</title>
-    <link type="text/css" rel="stylesheet" href="mycss.css">
+    <title>BLUELIFE</title>
+    <style>
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: Arial, sans-serif;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #00000000;
+    padding: 10px 30px;
+    padding-left: 50px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+}
+
+header .logo a {
+    text-decoration: none;
+    font-size: 24px;
+    font-weight: bold;
+    color: #ffffff;
+    font-family: 'Dune Rise', sans-serif; /* Dune Rise 폰트 적용 */
+    text-transform: lowercase; /* 소문자 적용 */
+}
+header .logo a:hover {
+    color: rgba(235, 235, 235, 0.304);
+}
+
+nav ul {
+    list-style: none;
+    display: flex;
+    padding-right: 10px;
+}
+
+nav ul li {
+    margin-left: 30px;
+    letter-spacing: 0.2em;
+    padding: 20px;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: #ffffff;
+    font-size: 18px;
+}
+nav ul li a:hover {
+    color:rgba(235, 235, 235, 0.304);
+}
+
+main {
+    background-color: white;
+    flex-grow: 1;
+    padding: 0px;
+    display: flex;
+}
+.video-container {
+    position: relative;
+    width: 100%;
+    height: 90%;
+}
+main video {
+    width: 100%;
+    height: 90%;
+    object-fit: cover;
+}
+.overlay-text {
+    position: absolute;
+    top: 50%;
+    left: 32%;
+    transform: translate(-50%, -50%);
+    color: rgb(255, 255, 255);
+    
+    font-size: 3.5em; /* 글씨 크기 설정 */
+    text-shadow: 2px 2px 6px rgba(244, 244, 244, 0.411), 0.674;
+    text-align: left;
+    font-weight: bold;
+}
+
+    </style>
 </head>
 <body>
     <header>
-        <h1>My Blog Page</h1>
+        <div class="logo">
+            <a href="index.html">BLUELIFE</a>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="about.html" target="_self">About</a></li>
+                <li><a href="problem.html" target="_self">Problem</a></li>
+                <li><a href="news.html" target="_self">News</a></li>
+                <li><a href="works.html" target="_self">Works</a></li>
+            </ul>
+        </nav>
     </header>
-    <nav>
-        <h1>Links</h1>
-    <ul>
-        <li><a href="index.html">HOME</a></li>
-        <li><a href="1.html">HTML</a></li>
-        <li><a href="2.html">CSS</a></li>
-        <li><a href="3.html">JAVASCRIPT</a></li>
-        <li><a href="myani.html">ani 1</a></li>
-        <li><a href="myani2.html">ani 2</a></li>
-    </ul>
-    <figure>
-        <img width="85" height="85" src="1.jpg" alt="원숭이"/>
-    </figure>
-    </nav>
-    <section id="main">
-        <article>
-            <h1>Semantic Tags</h1>
-            <p>
-                시맨틱 요소(Semantic elements)들은 브라우저에게 요소의 의미나 목적을 명확하게 알려주는 요소이다.
-            </p>
-        </article>
-        <article>
-            <h1>div와 span</h1>
-            <p>
-                div는 "divide"의 약자로서 페이지를 논리적인 섹션으로 분리하는데 사용되는 태그이다. span 요소는 인라인 요소로서 텍스트를 위한 컨테이너로 사용할 수 있다.
-            </p>
-        </article>
-    </section>
-    <footer>Copyright (c) 2023 Hong</footer>
+    <main>
+        <div class="video-container">
+            <video autoplay loop muted>
+                <source src="v4.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+            <div class="overlay-text">Together for Cleaner Oceans</div>
+        </div>
+    </main>
 </body>
 </html>
